# Remote-controlled-6-switch-relay-system

./: CMakeLists.txt  Documentation.md  README.md  Section-Documentaion.md
include/log_error/: log_error.cpp  log_error.h
src/: main.cpp
